--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-  <section id="title">
+  <section class="colored-section" id="title">
 
     <div class="container-fluid">
 
@@ -47,7 +47,7 @@
       <!-- Title -->
       <div class="row">
         <div class="col-lg-6">
-          <h1>Meet new and interesting dogs nearby.</h1>
+          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
           <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
         </div>
@@ -61,22 +61,22 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <section class="white-section" id="features">
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-4 feature-col">
           <i class="fas fa-check-circle fa-4x feature-icon"></i>
-          <h3>Easy to use.</h3>
+          <h3 class="feature-title">Easy to use.</h3>
           <p class="feature-text">So easy to use, even your dog could do it.</p>
         </div>
         <div class="col-lg-4 feature-col">
           <i class="far fa-dot-circle fa-4x feature-icon"></i>
-          <h3>Elite Clientele</h3>
+          <h3 class="feature-title">Elite Clientele</h3>
           <p class="feature-text">We have all the dogs, the greatest dogs.</p>
         </div>
         <div class="col-lg-4 feature-col">
           <i class="fas fa-heart fa-4x feature-icon"></i>
-          <h3>Guaranteed to work.</h3>
+          <h3 class="feature-title">Guaranteed to work.</h3>
           <p class="feature-text">Find the love of your dog's life or your money back.</p>
         </div>
       </div>
@@ -86,16 +86,16 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section class="colored-section" id="testimonials">
 
     <div id="testimonial-carousel" class="carousel slide" data-ride="false" data-pause="true">
       <div class="carousel-inner">
-        <div class="carousel-item active">
-          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+        <div class="carousel-item active container-fluid">
+          <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
           <img class="testimonial-img" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item container-fluid">
           <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
           <img class="testimonial-img" src="images/lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
@@ -114,7 +114,7 @@
 
   <!-- Press -->
 
-  <section id="press">
+  <section class="colored-section" id="press">
     <img class="press-img" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-img" src="images/tnw.png" alt="tnw-logo">
     <img class="press-img" src="images/bizinsider.png" alt="biz-insider-logo">
@@ -125,61 +125,61 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section class="white-section" id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
+    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
     <!-- <div class="row"> -->
 
-      <div class="row">
+    <div class="row">
 
-        <div class="pricing-column col-lg-4 col-md-6">
-          <div class="card">
-            <div class="card-header">
-              <h3>Chihuahua</h3>
-            </div>
-            <div class="card-body">
-              <h2>Free</h2>
-              <p>5 Matches Per Day</p>
-              <p>10 Messages Per Day</p>
-              <p>Unlimited App Usage</p>
-              <button type="button" class="btn btn-outline-dark btn-lg btn-block">Sign Up</button>
-            </div>
+      <div class="pricing-column col-lg-4 col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h3 class="price-heading">Chihuahua</h3>
           </div>
-        </div>
-
-        <div class="pricing-column col-lg-4 col-md-6">
-          <div class="card">
-            <div class="card-header">
-              <h3>Labrador</h3>
-            </div>
-            <div class="card-body">
-              <h2>$49 / mo</h2>
-              <p>Unlimited Matches</p>
-              <p>Unlimited Messages</p>
-              <p>Unlimited App Usage</p>
-              <button type="button" class="btn btn-dark btn-lg btn-block">Sign Up</button>
-            </div>
-          </div>
-        </div>
-
-        <div class="pricing-column col-lg-4">
-          <div class="card">
-            <div class="card-header">
-              <h3>Mastiff</h3>
-            </div>
-            <div class="card-body">
-              <h2>$99 / mo</h2>
-              <p>Priority Listing</p>
-              <p>Unlimited Matches</p>
-              <p>Unlimited Messages</p>
-              <p>Unlimited App Usage</p>
-              <button type="button" class="btn btn-dark btn-lg btn-block">Sign Up</button>
-            </div>
+          <div class="card-body">
+            <h2 class="price-text">Free</h2>
+            <p>5 Matches Per Day</p>
+            <p>10 Messages Per Day</p>
+            <p>Unlimited App Usage</p>
+            <button type="button" class="btn btn-outline-dark btn-lg btn-block">Sign Up</button>
           </div>
         </div>
       </div>
+
+      <div class="pricing-column col-lg-4 col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h3 class="price-heading">Labrador</h3>
+          </div>
+          <div class="card-body">
+            <h2 class="price-text">$49 / mo</h2>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button type="button" class="btn btn-dark btn-lg btn-block">Sign Up</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="pricing-column col-lg-4">
+        <div class="card">
+          <div class="card-header">
+            <h3 class="price-heading">Mastiff</h3>
+          </div>
+          <div class="card-body">
+            <h2 class="price-text">$99 / mo</h2>
+            <p>Priority Listing</p>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button type="button" class="btn btn-dark btn-lg btn-block">Sign Up</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- </div> -->
 
   </section>
@@ -187,27 +187,27 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
-
-    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
-    <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
-    <!-- <button type="button">Download</button>
+  <section class="colored-section" id="cta">
+    <div class="container-fluid">
+      <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
+      <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
+      <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
+      <!-- <button type="button">Download</button>
     <button type="button">Download</button> -->
-
+    </div>
   </section>
 
 
   <!-- Footer -->
 
-  <footer id="footer">
-
-    <i class="footer-fab fab fa-twitter"></i>
-    <i class="footer-fab fab fa-facebook-f"></i>
-    <i class="footer-fab fab fa-instagram"></i>
-    <i class="footer-fab fas fa-envelope"></i>
-    <p class="footer-fab footer-p">© Copyright 2019 TinDog</p>
-
+  <footer class="white-section" id="footer">
+    <div class="container-fluid">
+      <i class="footer-fab fab fa-twitter"></i>
+      <i class="footer-fab fab fa-facebook-f"></i>
+      <i class="footer-fab fab fa-instagram"></i>
+      <i class="footer-fab fas fa-envelope"></i>
+      <p class="footer-fab footer-p">© Copyright 2019 TinDog</p>
+    </div>
   </footer>
 
 
