--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
   <footer class="white-section" id="footer">
     <div class="container-fluid">
-      <i class="footer-fab fab fa-twitter"></i>
+      <a href="https://twitter.com"><i class="footer-fab fab fa-twitter"></i></a>
       <i class="footer-fab fab fa-facebook-f"></i>
       <i class="footer-fab fab fa-instagram"></i>
       <i class="footer-fab fas fa-envelope"></i>
